--- a/app/views/loaded_questions/games/completed.html.erb
+++ b/app/views/loaded_questions/games/completed.html.erb
@@ -1,21 +1,12 @@
 <%# locals: (game:, current_player:) %>
-<%= render layout: "loaded_questions/games/round", locals: { game:, current_player: } do %>
-  <div id="answers" class="list-group mt-3 mb-2">
-    <%= render(partial: "loaded_questions/games/completed_answer",
-      collection: game.guesses,
-      as: :completed_answer) %>
+<%= render "loaded_questions/games/player_stream", current_player: %>
+
+<div class="d-flex flex-wrap align-items-start gap-2 mt-2">
+  <div class="flex-grow-1">
+    <%= turbo_frame_tag "round_frame" do %>
+      <%= render "loaded_questions/games/completed_frame", game:, current_player: %>
+    <% end %>
   </div>
-  <div class="card text-bg-light mb-2">
-    <div class="card-body">
-      <p class="card-text">
-        <%= game.guesser.name %>'s Score = <%= game.guesses.score %>
-      </p>
-    </div>
-  </div>
-  <% unless current_player.guesser? %>
-    <%= link_to "Create Next Turn",
-      new_round_loaded_questions_game_path(game.slug),
-      class: "btn btn-primary w-100",
-      data: { turbo_frame: "_top" } %>
-  <% end %>
-<% end %>
+
+  <%= render "loaded_questions/games/players_list", players: game.players, current_player: %>
+</div>
