--- a/app/views/loaded_questions/games/guessing_player.html.erb
+++ b/app/views/loaded_questions/games/guessing_player.html.erb
@@ -1,9 +1,12 @@
 <%# locals: (game:, current_player:) %>
-<%= render layout: "loaded_questions/games/round", locals: { game:, current_player: } do %>
-  <div id="answers" class="mt-2 px-2 pb-2 border rounded">
-    <%= render(partial: "loaded_questions/games/guessed_answer",
-      collection: game.guesses,
-      as: :guessed_answer,
-      locals: { gripper: false }) %>
+<%= render "loaded_questions/games/player_stream", current_player: %>
+
+<div class="d-flex flex-wrap align-items-start gap-2 mt-2">
+  <div class="flex-grow-1">
+    <%= turbo_frame_tag "round_frame" do %>
+      <%= render "loaded_questions/games/guessing_player_frame", game: %>
+    <% end %>
   </div>
-<% end %>
+
+  <%= render "loaded_questions/games/players_list", players: game.players, current_player: %>
+</div>
