--- a/app/views/loaded_questions/games/new_round.html.erb
+++ b/app/views/loaded_questions/games/new_round.html.erb
@@ -1,11 +1,12 @@
 <%# locals: (game:, current_player:, new_round:) %>
-<%= render layout: "loaded_questions/games/game", locals: { game:, current_player: } do %>
-  <%= form_with(model: new_round, scope: :round, url: "#") do |form| %>
-    <div class="mb-3">
-      <%= form.label :question %>
-      <%= form.text_area :question, class: "w-100", maxlength: Game::MAX_QUESTION_LENGTH %>
-    </div>
+<%= render "loaded_questions/games/player_stream", current_player: %>
 
-    <%= form.submit "Create Next Turn", class: "w-100" %>
-  <% end %>
-<% end %>
+<div class="d-flex flex-wrap align-items-start gap-2 mt-2">
+  <div class="flex-grow-1">
+    <%= turbo_frame_tag "round_frame" do %>
+      <%= render "loaded_questions/games/new_round_form", new_round: %>
+    <% end %>
+  </div>
+
+  <%= render "loaded_questions/games/players_list", players: game.players, current_player: %>
+</div>
