--- a/app/views/loaded_questions/games/_completed_answer.html.erb
+++ b/app/views/loaded_questions/games/_completed_answer.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (completed_answer:) -%>
+<%# locals: (completed_answer:) %>
 <div class="list-group-item list-group-item-<%= completed_answer.correct? ? "success" : "danger" %>">
   <div class="d-flex w-100 justify-content-between">
     <div class="d-flex flex-wrap align-items-baseline gap-2">
