--- a/app/views/loaded_questions/games/_guessed_answer.html.erb
+++ b/app/views/loaded_questions/games/_guessed_answer.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (guessed_answer:, gripper:) -%>
+<%# locals: (guessed_answer:, gripper:) %>
 <div class="pt-2" data-swap-target="group">
   <div class="fw-bold">
     <%= guessed_answer.player.name %>
