fix for url changing in browser

--- a/app/views/loaded_questions/games/_guessing_guesser_frame.html.erb
+++ b/app/views/loaded_questions/games/_guessing_guesser_frame.html.erb
@@ -31,8 +31,7 @@
       <%= button_to("Yes, I am sure",
         completed_round_loaded_questions_game_path(game.slug),
         method: :patch,
-        class: "btn btn-primary",
-        form: { data: { turbo: false } }) %>
+        class: "btn btn-primary") %>
     </div>
   </dialog>
 </div>
