--- a/app/views/loaded_questions/games/_completed_frame.html.erb
+++ b/app/views/loaded_questions/games/_completed_frame.html.erb
@@ -15,6 +15,5 @@
 <% unless current_player.guesser? %>
   <%= link_to "Create Next Turn",
     new_round_loaded_questions_game_path(game.slug),
-    class: "btn btn-primary w-100",
-    data: { turbo_frame: "_top" } %>
+    class: "btn btn-primary w-100" %>
 <% end %>
