--- a/app/views/loaded_questions/games/_completed_frame.html.erb
+++ b/app/views/loaded_questions/games/_completed_frame.html.erb
@@ -1,19 +1,26 @@
 <%# locals: (game:, current_player:) %>
 <%= render "loaded_questions/games/question_card", question: game.question %>
 
-<div id="answers" class="list-group mt-3 mb-2">
-  <%= render(partial: "loaded_questions/games/completed_answer",
-    collection: game.guesses, as: :completed_answer) %>
-</div>
-<div class="card text-bg-light mb-2">
-  <div class="card-body">
-    <p class="card-text">
-      <%= game.guesser.name %>'s Score = <%= game.guesses.score %>
-    </p>
+<div class="card shadow-sm mb-3">
+  <div class="card-header bg-success text-white">
+    <h5 class="mb-0"><i class="bi bi-trophy-fill me-2"></i>Results</h5>
+  </div>
+  <div class="card-body p-0">
+    <div id="answers" class="list-group list-group-flush">
+      <%= render(partial: "loaded_questions/games/completed_answer",
+        collection: game.guesses, as: :completed_answer) %>
+    </div>
+  </div>
+  <div class="card-footer bg-light">
+    <div class="d-flex justify-content-between align-items-center">
+      <strong><%= game.guesser.name %>'s Score:</strong>
+      <span class="badge bg-primary fs-6"><%= game.guesses.score %> / <%= game.guesses.size %></span>
+    </div>
   </div>
 </div>
+
 <% unless current_player.guesser? %>
-  <%= link_to "Create Next Turn",
-    new_round_loaded_questions_game_path(game.slug),
-    class: "btn btn-primary w-100" %>
+  <%= link_to new_round_loaded_questions_game_path(game.slug), class: "btn btn-primary btn-lg w-100" do %>
+    <i class="bi bi-plus-circle-fill me-2"></i>Create Next Turn
+  <% end %>
 <% end %>
