--- a/app/views/loaded_questions/games/_players_list.html.erb
+++ b/app/views/loaded_questions/games/_players_list.html.erb
@@ -1,10 +1,16 @@
 <%# locals: (players:, current_player:) %>
-<div>
-  <div class="fw-bold">Players:</div>
-  <div id="players">
-    <%= render(partial: "loaded_questions/players/player",
-      collection: players,
-      as: :player,
-      locals: { current_player: }) %>
+<div class="flex-shrink-0" style="min-width: 200px;">
+  <div class="card shadow-sm">
+    <div class="card-header bg-light">
+      <h6 class="mb-0 fw-bold"><i class="bi bi-people-fill me-2"></i>Players</h6>
+    </div>
+    <div class="card-body">
+      <div id="players">
+        <%= render(partial: "loaded_questions/players/player",
+          collection: players,
+          as: :player,
+          locals: { current_player: }) %>
+      </div>
+    </div>
   </div>
 </div>
