add player edit form

--- a/app/views/loaded_questions/players/_player.html.erb
+++ b/app/views/loaded_questions/players/_player.html.erb
@@ -15,4 +15,12 @@
   <span class="flex-grow-1 <%= "fw-bold" if player == current_player %>">
     <%= player.name %>
   </span>
+  <% if player == current_player %>
+    <%= link_to edit_loaded_questions_game_player_path(player.game_slug),
+        data: { turbo_frame: "round_frame" },
+        class: "btn btn-sm btn-link text-muted p-0",
+        title: "Edit name" do %>
+      <i class="bi bi-pencil"></i>
+    <% end %>
+  <% end %>
 </div>
