--- a/app/views/loaded_questions/players/_player.html.erb
+++ b/app/views/loaded_questions/players/_player.html.erb
@@ -23,4 +23,7 @@
       <i class="bi bi-pencil"></i>
     <% end %>
   <% end %>
+  <span class="badge bg-secondary">
+    <%= player.score %>
+  </span>
 </div>
