player can be mutated

--- a/app/views/loaded_questions/games/_polling_player_frame.html.erb
+++ b/app/views/loaded_questions/games/_polling_player_frame.html.erb
@@ -24,9 +24,9 @@
               aria: { label: "Answer" },
               rows: 3,
               placeholder: "Type your answer here...",
-              maxlength: LoadedQuestions::AnswerForm::MAX_LENGTH %>
+              maxlength: LoadedQuestions::Player::MAX_ANSWER_LENGTH %>
             <div class="form-text">
-              Max <%= LoadedQuestions::AnswerForm::MAX_LENGTH %> characters
+              <%= LoadedQuestions::Player::MIN_ANSWER_LENGTH %>-<%= LoadedQuestions::Player::MAX_ANSWER_LENGTH %> characters
             </div>
           </div>
 
