--- a/app/views/loaded_questions/games/_guessed_answer.html.erb
+++ b/app/views/loaded_questions/games/_guessed_answer.html.erb
@@ -1,11 +1,17 @@
 <%# locals: (guessed_answer:, gripper:) %>
+
 <div class="mb-3" data-swap-target="group">
-  <div class="fw-bold text-secondary mb-1" data-player-name-id="<%= guessed_answer.player.id %>">
+  <div
+    class="fw-bold text-secondary mb-1"
+    data-player-name-id="<%= guessed_answer.player.id %>"
+  >
     <%= guessed_answer.player.name %>
   </div>
-  <div class="card swap-item <%= "shadow-sm border-primary" if gripper %> <%= "bg-white" if gripper %> <%= "bg-light" unless gripper %>"
+  <div
+    class="card swap-item <%= "shadow-sm border-primary" if gripper %> <%= "bg-white" if gripper %> <%= "bg-light" unless gripper %>"
     data-id="<%= guessed_answer.player.id %>"
-    <%= 'style="cursor: grab;"' if gripper %>>
+    <%= 'style="cursor: grab;"' if gripper %>
+  >
     <div class="card-body p-2">
       <div class="d-flex align-items-center gap-2">
         <% if gripper %>
@@ -13,9 +19,7 @@
             <i class="bi bi-grip-vertical fs-4"></i>
           </div>
         <% end %>
-        <div class="flex-grow-1">
-          <%= guessed_answer.guessed_answer %>
-        </div>
+        <div class="flex-grow-1"><%= guessed_answer.guessed_answer %></div>
       </div>
     </div>
   </div>
