--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title><%= content_for(:title) || "Party" %></title>
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
     <meta name="apple-mobile-web-app-capable" content="yes">
+
     <meta name="mobile-web-app-capable" content="yes">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= yield :head %>
 
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
-    <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
+    <%# = tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
 
     <link rel="icon" href="/icon.png" type="image/png">
+
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
+
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
@@ -23,13 +30,16 @@
   </head>
 
   <body>
-    <div class="container">
-      <%= yield %>
-    </div>
+    <div class="container"><%= yield %></div>
   </body>
 
   <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <footer
+      class="
+        d-flex flex-wrap justify-content-between align-items-center py-3
+        my-4 border-top
+      "
+    >
       <div class="col-md-4">
         <span class="mb-3 mb-md-0 text-muted">© 2025 Jeremy Nicklas</span>
       </div>
